# zed-nim

./: Cargo.toml  README.md  extension.toml
.github/workflows/: release.yml
languages/nim/: brackets.scm  config.toml  highlights.scm  indents.scm  injections.scm  outline.scm  runnables.scm  tasks.json
languages/nim_format_string/: config.toml  highlights.scm  injections.scm
src/: lib.rs
