[package]
name = "zed_nim"
version = "0.0.1"
edition = "2021"
publish = false
license = "Apache-2.0"
authors = ["Foxoman <sultan@foxoman.net>"]
description = "Zed extension adding Nim Support"
keywords = ["zed", "nim"]
categories = ["development-tools"]

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.0.6"
